tests/should-fail/shouldnt-crash-19.j
function a takes nothing returns integer
	if true then
		return 0
	elseif false then
local	else
		return 1
	endif
endfunction
